# Embedded-Computation

./: .gitignore  CMakeLists.txt  LICENSE.md  ReadMe.md
TD1/: CMakeLists.txt
TD1/includes/: common.h  main.h
TD1/src/: main.cpp
TD2/: CMakeLists.txt
TD2/src/: main.cpp
TD3/: CMakeLists.txt
TD3/src/: main.cpp
TD4/: CMakeLists.txt
TD4/includes/: common.h
TD4/src/: main.cpp
TD5/: CMakeLists.txt
TD5/src/: main.cpp
TD6/: CMakeLists.txt
TD6/src/: CMakeLists.txt  EmptyIntervalException.h  Interval.cpp  Interval.h
TD6/tests/: CMakeLists.txt  test.cpp
TD7/: CMakeLists.txt
TD7/src/: CMakeLists.txt  common.cpp  common.h  common.tpp  main.cpp
signal_proc/: CMakeLists.txt
signal_proc/src/: CMakeLists.txt  dft.cpp  dft.h  exchange.h  global.h  main.cpp  signalutils.h
signal_processing/: .gitignore  CMakeLists.txt
signal_processing/read_audio/: AuAudioFile.cpp  AuAudioFile.h  BadEncodingException.h  CMakeLists.txt  read_audio.cpp
signal_processing/signal_utils/: CMakeLists.txt  common.h  dft.tpp  fft.h  fourier.cpp  fourier.h  fourier.tpp  signal_utils.cpp  signal_utils.h  signal_utils.tpp
signal_processing/signal_utils/dft/: dft.cpp  dft.h  dft.tpp
signal_processing/signal_utils/fft/: fft.cpp  fft.h
signal_processing/signal_utils/stft/: stft.cpp  stft.h
signal_processing/src/: SignalProcessingConfig.h.in  main.cpp
signal_processing/src/audio_processing/: AuAudioFile.cpp  AuAudioFile.h
signal_processing/src/audio_reading/: audio_read.cpp  audio_read.h
signal_utils/: CMakeLists.txt
signal_utils/lib/: CMakeLists.txt  signal_utils.cpp  (+2 more)
(+3 files in other folders)
